+ State Iterator to use state + PotentialWithIn now takes in account raises